[gd_scene load_steps=5 format=3 uid="uid://d16x3vr7ws0km"]

[ext_resource type="PackedScene" uid="uid://dbhy5ultx1d0p" path="res://seringue_true.tscn" id="1_biety"]
[ext_resource type="PackedScene" uid="uid://dhro02jqh1yfm" path="res://tube.tscn" id="1_cj86y"]
[ext_resource type="Script" path="res://node.gd" id="1_q75m3"]
[ext_resource type="PackedScene" uid="uid://rptyr3uc1k4q" path="res://chaudron.tscn" id="3_7omsv"]

[node name="Node" type="Node"]
script = ExtResource("1_q75m3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.0980392, 0.270588, 1)

[node name="seringue true" parent="." instance=ExtResource("1_biety")]
position = Vector2(320, 212)

[node name="tube2" parent="." instance=ExtResource("1_cj86y")]
position = Vector2(1021, 475)

[node name="chaudron" parent="." instance=ExtResource("3_7omsv")]
position = Vector2(-9, 314)
scale = Vector2(2, 2)

[node name="tube" parent="." instance=ExtResource("1_cj86y")]
position = Vector2(623, 474)

[node name="tube3" parent="." instance=ExtResource("1_cj86y")]
position = Vector2(836, 481)

[connection signal="area_entered" from="chaudron" to="." method="_on_chaudron_area_entered"]
